# llmtui

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DESIGN_IMPROVEMENTS.md  DUPLICATION_REVIEW.md  README.md  REVIEW.md  UI_DESIGN_REVIEW.md  build.rs  build.sh  d  error  llm-manager.env  llm-manager.service  llm-server.env  llm-server.service  mario.c  plan-settingfield.md  pong  pong.c  sec.md  u
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.qwen/skills/avoid-repeated-log-messages/: SKILL.md
.qwen/skills/debug-loading-progress/: SKILL.md
.qwen/skills/i18n-review-fix/: SKILL.md
docs/: book.toml
docs/src/: SUMMARY.md  api-reference.md  architecture.md  architecture.md#app-state-machine  architecture.md#download-system  architecture.md#metrics--logging  architecture.md#model-discovery  architecture.md#server-spawning  config.md  config.md#backend-binaries  config.md#serve-mode  config.md#system-prompt-presets  dashboard.md  getting-started.md  introduction.md  usage.md
documentation/: book.toml
documentation/src/: SUMMARY.md  api-endpoint.md  api-reference.md  architecture.md  benchmark-tuning.md  cache-prompt.md  cache-reuse.md  cache.md  chat-templates.md  config.md  dashboard-url-modal.md  dashboard.md  distributed-inference.md  getting-started.md  gguf-filename-explanation.md  gnome-extension.md  introduction.md  letsencrypt.md  llm-settings.md  max-concurrent-predictions.md  onboarding.md  opencode.md  router-mode.md  server-settings.md  speculative-decoding.md  systemd.md  usage.md  web-search.md
exports/: ocmonitor_projects_20260524_101614.csv
llm-manager@aginies/: extension.js  metadata.json  prefs.js  stylesheet.css  test.js
llm-manager@aginies/config/: metrics.js
llm-manager@aginies/schemas/: gschemas.compiled  org.gnome.shell.extensions.llm-manager.gschema.xml
locales/: de.json  en.json  fr.json  it.json
src/: config.rs  dashboard.html  lib.rs  main.rs  models.rs  serve.rs  serve_api.rs  ws_server.rs
src/backend/: api.rs  benchmark.rs  benchmark_report.html  hardware.rs  hub.rs  mod.rs  server.rs  server_logs.rs  tls.rs  web_context.rs  web_search.rs  ws_server.rs
src/config/: model_config.rs  presets.rs  profiles.rs  store.rs
src/http/: app.rs  mod.rs  routes.rs  upgrade.rs  ws.rs
src/tui/: app.rs  app.rs.new_func.txt  colors.rs  event.rs  gguf_naming.rs  i18n.rs  mod.rs  render.rs  settings.rs  toast.rs
src/tui/app/: async_ops.rs  help.rs  metadata.rs  panels.rs  pending_events.rs  pickers.rs  profiles.rs  state.rs  sync_ops.rs  types.rs
src/tui/app/state/: mod.rs  parsing.rs  state_impl.rs
src/tui/app/types/: sub.rs
src/tui/event/: benches.rs  helpers.rs  key.rs  mod.rs  mouse.rs  readme.rs  rpc_workers.rs
src/tui/event/overlay/: about.rs  api_endpoint_picker.rs  backend_picker.rs  bench_tune_setup.rs  chat_template_file_picker.rs  chat_template_picker.rs  cmd_line.rs  confirmation.rs  dashboard_picker.rs  dashboard_url.rs  directory_picker.rs  gguf_naming.rs  host_picker.rs  max_concurrent_picker.rs  mod.rs  onboarding.rs  (+7 more)
src/tui/panel/: about.rs  active.rs  api_endpoints.rs  config.rs  help.rs  info.rs  input.rs  log.rs  mod.rs  models.rs  profiles.rs  readme.rs  rpc_workers.rs  server_settings.rs  settings.rs  system_prompt_presets.rs  tabbed.rs
src/tui/render/: hints.rs  onboarding.rs  overlays.rs  status.rs
tests/: app_tests.rs  benchmark_tests.rs  config_tests.rs  event_tests.rs  hub_tests.rs  loading_parser_tests.rs  mod.rs  models_tests.rs  render_tests.rs  server_tests.rs  sync_ops_tests.rs  test_gguf_naming.rs  ui_utils_tests.rs
tools/llm-acme/: Cargo.toml
tools/llm-acme/src/: main.rs
(+8 files in other folders)
