[package]
name = "llm-manager"
version = "0.9.3"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
pulldown-cmark = "0.12"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
rand = "0.9"
unicode-width = "0.2"
anyhow = "1"
serde_json = "1"
futures-util = "0.3"
urlencoding = "2"
gguf-rs = "0.1"
flate2 = "1"
tar = "0.4"
zip = "2"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
local-ip-address = "0.6"
libc = "0.2"

