[package]
name = "llm-manager"
version = "1.5.2"
edition = "2024"
description = "Terminal UI for managing LLMs"
license = "GPL-3.0-or-later"
authors = ["Antoine Giniès <antoine@ginies.org>"]
repository = "https://github.com/aginies/llmtui"
documentation = "https://docs.rs/llm-manager"
readme = "README.md"
categories = ["command-line-utilities", "visualization"]
keywords = ["llm", "llama", "tui", "terminal", "ai"]
exclude = [
    ".git/",
    ".github/",
    "documentation/",
    "*.env",
    "*.service",
    ".gitignore",
    "*.swp",
]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
pulldown-cmark = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "net", "process", "sync", "time", "signal", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.13"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
unicode-width = "0.2"
anyhow = "1"
serde_json = "1"
futures-util = "0.3"
urlencoding = "2"
gguf-rs = "0.1"
flate2 = "1"
tar = "0.4"
zip = "2"
axum = { version = "0.8", features = ["ws", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
local-ip-address = "0.6"
  rcgen = { version = "0.14", default-features = false, features = ["pem", "x509-parser", "ring"] }
x509-parser = "0.16"
rustls-pemfile = "2"
libc = "0.2"
   arboard = "3"
      sysinfo = "0.38"
    regex = "1"
scraper = "0.21"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
 wiremock = "0.6"

